--- a/assets/css/week-calendar.css
+++ b/assets/css/week-calendar.css
@@ -11,9 +11,17 @@ body {
     background: url('../images/background.png') center fixed no-repeat;
 }
 
+/* Riduzione spazio header superiore */
+html, body {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
 .dashboard-container {
     width: 100vw;
     min-height: 100vh;
+    margin-top: -2px;
 }
 
 /* Layout calendario */
@@ -44,7 +52,8 @@ body {
     background: #222;
     color: #fff;
     border: 1px solid #fff;
-    padding: 6px 2px 2px;
+    padding: 4px 2px 2px;
+    line-height: 1.2;
 }
 
 .header-day.today {
